# desafio-mailerweb-ino

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: celery.py  settings.py  urls.py
backend/core/: admin.py  choices.py  enums.py  models.py  serializers.py
backend/core/migrations/: 0001_initial.py  0002_room.py  0003_btree_gist_extension.py  0004_reservation.py  0005_outboxevent_alter_reservation_prevent_room_overlap.py
backend/core/models/: __init__.py  base_model.py  user_model.py
backend/core/signals/: __init__.py  reservation.py
backend/core/tasks/: __init__.py  email_task.py  periodic_task.py
backend/core/templates/emails/reservation/: reservation.html  reservation.txt
backend/core/tests/: test_admin.py  test_commands.py  test_models.py
backend/reservation/: apps.py  serializers.py  urls.py  views.py
backend/room/: serializers.py  urls.py  views.py
backend/tests/: conftest.py  test_commands.py
backend/tests/api/: test_reservation_api.py  test_room_api.py  test_user_api.py
backend/tests/fixtures/: api.py  factories.py  reservation.py  room.py  shared.py  user.py
backend/tests/models/: test_reservation.py  test_room.py  test_user.py
backend/tests/serializers/: test_reservation_serializer.py  test_room_serializer.py
backend/tests/tasks/: test_email_task.py  test_periodic_task.py
backend/user/: serializers.py  urls.py  views.py
backend/user/tests/: test_user_api.py
core/management/commands/: wait_for_db.py
frontend/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  webpack-runtime.js  (+2 more)
user/: urls.py
(+157 files in other folders)
