[project]
name = "django-project-default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.0,<5.3.0",
    "djangorestframework>=3.16.0,<3.17",
    "djangorestframework-simplejwt>=5.5.0,<5.6.0",
    "drf-spectacular>=0.29.0,<0.30.0",
    "psycopg2>=2.9.0,<3.0.0",
    "python-dotenv>=1.2.0,<1.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
